--- a/create_ou_grp.yml
+++ b/create_ou_grp.yml
@@ -10,15 +10,15 @@
 
   tasks:
 
-   - name: Create Organizational Unit
-     microsoft.ad.ou:
-      name: "{{ org_unit }}"
-      state: present
-      protect_from_deletion: true
+   # - name: Create Organizational Unit
+   #   microsoft.ad.ou:
+   #    name: "{{ org_unit }}"
+   #    state: present
+   #    protect_from_deletion: true
 
-   - name: Create a group in an OU
-     microsoft.ad.group:
-      name: "{{ group_name }}"
-      scope: global
-      path: OU="{{ org_unit }}",DC=instruqt,DC=ansible
-      state: present
+   # - name: Create a group in an OU
+   #   microsoft.ad.group:
+   #    name: "{{ group_name }}"
+   #    scope: global
+   #    path: OU="{{ org_unit }}",DC=instruqt,DC=ansible
+   #    state: present
