--- a/create_user.yml
+++ b/create_user.yml
@@ -1,12 +1,13 @@
 ---
 - 
+  name: Manage users in our Org
   hosts: windows_servers
   gather_facts: false
 
   vars: 
-   ou_path:
-   user_identity:
-   user_password:
+   ou_path: 
+   user_identity: 
+   user_password: 
    
   tasks:
  
@@ -20,11 +21,11 @@
        set:
         - Domain Users
      tags:
-       - add_user
+       - user
        - never
 
    - name: Create an admin user with correct OU defined
-     microsoft.ad .user:
+     microsoft.ad.user:
       identity: "{{ user_identity }}"
       password: "{{ user_password }}"
       state: present
@@ -34,5 +35,19 @@
         - Domain Users
         - Domain Admins
      tags:
-       - add_domain
+       - admin_user
+       - never
+
+   - name: Create an Ansible user
+     microsoft.ad.user:
+      identity: "{{ user_identity }}"
+      password: "{{ user_password }}"
+      state: present
+      path: "{{ ou_path }}"
+      groups:
+       set:
+        - Domain Users
+        - DevOps
+     tags:
+       - ansible_user
        - never
