--- a/user_info.yml
+++ b/user_info.yml
@@ -7,14 +7,22 @@
     - name: Get AD user accounts with groups and lock status
       win_shell: |
         Import-Module ActiveDirectory
-        Get-ADUser -Filter * -Property DisplayName, EmailAddress, SamAccountName, MemberOf, LockedOut |
-        Select-Object DisplayName, EmailAddress, SamAccountName, @{Name="Groups";Expression={(Get-ADUser -Identity $_.SamAccountName -Property MemberOf | Select-Object -ExpandProperty MemberOf | Get-ADGroup | Select-Object -ExpandProperty Name) -join ", "}}, LockedOut |
+        Get-ADUser -Filter * -Property GivenName, Surname, SamAccountName, MemberOf, LockedOut |
+        Select-Object GivenName, Surname, SamAccountName, @{Name="Groups";Expression={(Get-ADUser -Identity $_.SamAccountName -Property MemberOf | Select-Object -ExpandProperty MemberOf | Get-ADGroup | Select-Object -ExpandProperty Name) -join ", "}}, LockedOut |
         ConvertTo-Json
       register: ad_users
 
     - name: Create HTML file from template
-      template:
+      ansible.builtin.template:
         src: templates/users_template.html.j2
-        dest: /user_report.html
+        dest: C:\sites\ad_report\user_info.html
       vars:
         users: "{{ ad_users.stdout | from_json }}"
+      notify: restart iis service
+
+  handlers:
+    - name: restart iis service
+      ansible.windows.win_service:
+        name: W3Svc
+        state: restarted
+        start_mode: auto
