--- a/setup_iis.yml
+++ b/setup_iis.yml
@@ -1,7 +1,14 @@
+
 ---
 - name: Configure IIS on Windows
   hosts: windows
   gather_facts: no
+
+  vars:
+    iis_sites:
+      - name: 'Active Directory Report'
+        port: '8080'
+        path: 'C:\sites\ad_report'
 
   tasks:
 
@@ -10,9 +17,19 @@
         name: Web-Server
         state: present
 
-  handlers:
-    - name: restart iis service
-      ansible.windows.win_service:
-        name: W3Svc
-        state: restarted
-        start_mode: auto
+    - name: Create site directory structure
+      ansible.windows.win_file:
+        path: "{{ item.path }}"
+        state: directory
+      with_items: "{{ iis_sites }}"
+
+    - name: Open port for site on the firewall
+      community.windows.win_firewall_rule:
+        name: "iisport{{ item.port }}"
+        enable: true
+        state: present
+        localport: "{{ item.port }}"
+        action: Allow
+        direction: In
+        protocol: Tcp
+      with_items: "{{ iis_sites }}"
