--- a/user_info.yml
+++ b/user_info.yml
@@ -1,11 +1,11 @@
 ---
 - name: Get AD Users and create HTML report
   hosts: windows
-  gather_facts: no
-  tasks:
+  gather_facts: false
 
+  tasks:
     - name: Get AD user accounts with groups and lock status
-      win_shell: |
+      ansible.windows.win_shell: |
         Import-Module ActiveDirectory
         Get-ADUser -Filter * -Property GivenName, Surname, SamAccountName, MemberOf, LockedOut |
         Select-Object GivenName, Surname, SamAccountName, @{Name="Groups";Expression={(Get-ADUser -Identity $_.SamAccountName -Property MemberOf | Select-Object -ExpandProperty MemberOf | Get-ADGroup | Select-Object -ExpandProperty Name) -join ", "}}, LockedOut |
@@ -13,7 +13,7 @@
       register: ad_users
 
     - name: Create HTML file from template
-      ansible.builtin.template:
+      ansible.windows.win_template:
         src: templates/users_template.html.j2
         dest: C:\sites\ad_report\user_info.html
       vars:
