--- a/user_info.yml
+++ b/user_info.yml
@@ -4,6 +4,13 @@
   gather_facts: false
 
   tasks:
+  
+    - name: Create site directory structure
+      ansible.windows.win_file:
+        path: "{{ item.path }}"
+        state: directory
+      with_items: "{{ iis_sites }}"
+  
     - name: Get AD user accounts with groups and lock status
       ansible.windows.win_shell: |
         Import-Module ActiveDirectory
