--- a/user_info.yml
+++ b/user_info.yml
@@ -3,13 +3,15 @@
   hosts: windows
   gather_facts: false
 
+  vars:
+    report_path: 'C:\sites\ad_report'
+
   tasks:
   
     - name: Create site directory structure
       ansible.windows.win_file:
-        path: "{{ item.path }}"
+        path: "{{ report_path }}"
         state: directory
-      with_items: "{{ iis_sites }}"
   
     - name: Get AD user accounts with groups and lock status
       ansible.windows.win_shell: |
