--- a/user_info.yml
+++ b/user_info.yml
@@ -7,17 +7,32 @@
     report_path: 'C:\sites\ad_report'
 
   tasks:
-  
     - name: Create site directory structure
       ansible.windows.win_file:
         path: "{{ report_path }}"
         state: directory
-  
+
     - name: Get AD user accounts with groups and lock status
       ansible.windows.win_shell: |
         Import-Module ActiveDirectory
         Get-ADUser -Filter * -Property GivenName, Surname, SamAccountName, MemberOf, LockedOut |
         Select-Object GivenName, Surname, SamAccountName, @{Name="Groups";Expression={(Get-ADUser -Identity $_.SamAccountName -Property MemberOf | Select-Object -ExpandProperty MemberOf | Get-ADGroup | Select-Object -ExpandProperty Name) -join ", "}}, LockedOut |
+        # Select-Object \
+        #   GivenName, \
+        #   Surname, \
+        #   SamAccountName, \
+        #   @{ \
+        #     Name = "Groups"; \
+        #     Expression = { \
+        #       ( \
+        #         Get-ADUser -Identity $_.SamAccountName -Property MemberOf | \
+        #         Select-Object -ExpandProperty MemberOf | \
+        #         Get-ADGroup | \
+        #         Select-Object -ExpandProperty Name \
+        #       ) -join ", " \
+        #     } \
+        #   }, \
+        #   LockedOut |
         ConvertTo-Json
       register: ad_users
 
@@ -27,4 +42,3 @@
         dest: C:\sites\ad_report\user_info.html
       vars:
         users: "{{ ad_users.stdout | from_json }}"
-
