--- a/lab_users.yml
+++ b/lab_users.yml
@@ -4,7 +4,7 @@
   gather_facts: false
 
   vars:
-    ou_path: OU=Ansible,DC=instruqt,DC=ansible
+    ou_path: OU=Ansible,DC=active-directory-lab,DC=ansible
     user_password: "{{ lookup('password', '/dev/null chars=ascii_uppercase,ascii_lowercase,digits,punctuation, length=20') }}"
     users_list:
       sean:
