--- a/ad_promote.yml
+++ b/ad_promote.yml
@@ -14,7 +14,7 @@
 
     - name: Promote system to a domain Controller
       microsoft.ad.domain:
-        dns_domain_name: instruqt.ansible
+        dns_domain_name: active-directory-lab.ansible
         safe_mode_password: "{{ safe_password }}"
         domain_mode: Win2012R2
         domain_netbios_name: ANSIBLE
